src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>API_ID__c</fullName>
        <description>Getfeedback response unique id</description>
        <inlineHelpText>Getfeedback response unique id</inlineHelpText>
        <label>API ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_10__c</fullName>
        <label>Answer 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_11__c</fullName>
        <label>Answer 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_12__c</fullName>
        <label>Answer 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Long_Text_10__c</fullName>
        <label>Answer Long Text 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Long_Text_11__c</fullName>
        <label>Answer Long Text 11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Long_Text_12__c</fullName>
        <label>Answer Long Text 12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_1_FID__c</fullName>
        <formula>Barg_Ldr_Nominee_1__r.FID__c</formula>
        <label>Barg Ldr Nominee 1 FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_1_Job_Class__c</fullName>
        <description>Job Class or Title of Bargaining Leader Nominee 1 (text)</description>
        <inlineHelpText>Job Class or Title of Bargaining Leader Nominee 1 (text)</inlineHelpText>
        <label>Barg Ldr Nominee 1 Job Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bargaining Leader Nominee 1 (Referenced Contact Id)</description>
        <inlineHelpText>Bargaining Leader Nominee 1 (Referenced Contact Id)</inlineHelpText>
        <label>Barg Ldr Nominee 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Questionnaires (Barg Ldr Nominee 1)</relationshipLabel>
        <relationshipName>Questionnaires1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_2_FID__c</fullName>
        <formula>Barg_Ldr_Nominee_2__r.FID__c</formula>
        <label>Barg Ldr Nominee 2 FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_2_Job_Class__c</fullName>
        <description>Job Class or Title of Bargaining Leader Nominee 2 (text)</description>
        <inlineHelpText>Job Class or Title of Bargaining Leader Nominee 2 (text)</inlineHelpText>
        <label>Barg Ldr Nominee 2 Job Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bargaining Leader Nominee 2 (Referenced Contact Id)</description>
        <inlineHelpText>Bargaining Leader Nominee 2 (Referenced Contact Id)</inlineHelpText>
        <label>Barg Ldr Nominee 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Questionnaires (Barg Ldr Nominee 2)</relationshipLabel>
        <relationshipName>Questionnaires2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_Dept_1__c</fullName>
        <description>Dept of Bargaining Leader Nominee 1 (text)</description>
        <inlineHelpText>Dept of Bargaining Leader Nominee 1 (text)</inlineHelpText>
        <label>Barg Ldr Nominee Dept 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_Dept_2__c</fullName>
        <description>Dept of Bargaining Leader Nominee 2 (text)</description>
        <inlineHelpText>Dept of Bargaining Leader Nominee 2 (text)</inlineHelpText>
        <label>Barg Ldr Nominee Dept 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_Name_1__c</fullName>
        <description>Bargaining Leader Nominee 1 (Name Text)</description>
        <inlineHelpText>Bargaining Leader Nominee 1 (Name Text)</inlineHelpText>
        <label>Barg Ldr Nominee Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barg_Ldr_Nominee_Name_2__c</fullName>
        <description>Bargaining Leader Nominee 2 (Name Text)</description>
        <inlineHelpText>Bargaining Leader Nominee 2 (Name Text)</inlineHelpText>
        <label>Barg Ldr Nominee Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Time__c</fullName>
        <label>Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>Survey_Taker_Contact__r.Coordinator__c</formula>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Hired__c</fullName>
        <formula>Survey_Taker_Contact__r.Hire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Hired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dept_Ldr_Nominee_1_FID__c</fullName>
        <formula>Dept_Ldr_Nominee_1__r.FID__c</formula>
        <label>Dept Ldr Nominee 1 FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Ldr_Nominee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Leader nominated as a Departmental Leader 1. (Referenced Contact Id)</description>
        <inlineHelpText>The Leader nominated as a Departmental Leader 1. (Referenced Contact Id)</inlineHelpText>
        <label>Dept Ldr Nominee 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Questionnaires (Dept Ldr Nominee 1)</relationshipLabel>
        <relationshipName>Questionnaires3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dept_Ldr_Nominee_Name_1__c</fullName>
        <description>The Leader nominated as a Departmental Leader 1. (Name Text)</description>
        <inlineHelpText>The Leader nominated as a Departmental Leader 1. (Name Text)</inlineHelpText>
        <label>Dept Ldr Nominee Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Reconcile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you want a survey not to appear in the Recon tool, check this box.</description>
        <label>Do Not Reconcile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <description>Survey Taker&apos;s Employee Id</description>
        <inlineHelpText>Survey Taker&apos;s Employee Id</inlineHelpText>
        <label>Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <description>This is the Facility represented by the Union Rep/Org - staff;</description>
        <inlineHelpText>This is the Facility represented by the Union Rep/Org - staff;</inlineHelpText>
        <label>Facility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_from__c</fullName>
        <label>Feedback from</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Current_BU__c</fullName>
        <description>Survey Taker&apos;s In Current BU</description>
        <formula>Survey_Response__r.Contact__r.In_Current_BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Survey Taker&apos;s In Current BU</inlineHelpText>
        <label>In Current BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ldr_Employer_Coordinator__c</fullName>
        <formula>Leader_Employer__r.Coordinator__r.FirstName &amp; &apos; &apos; &amp; Leader_Employer__r.Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ldr Employer Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ldr_Employer_Organizer__c</fullName>
        <formula>Leader_Employer__r.Organizer_1__r.FirstName &amp; &apos; &apos; &amp; Leader_Employer__r.Organizer_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ldr Employer Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Department__c</fullName>
        <label>Leader Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Employer_Name__c</fullName>
        <description>Employer Name (in text) of the Leader moving the survey</description>
        <inlineHelpText>Employer Name (in text) of the Leader moving the survey</inlineHelpText>
        <label>Leader Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employer of the leader moving the survey.</description>
        <inlineHelpText>Employer of the leader moving the survey.</inlineHelpText>
        <label>Leader Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionnaires (Leader Employer)</relationshipLabel>
        <relationshipName>Questionnaires1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leader_Name__c</fullName>
        <description>Leader moving the survey (Name Text)</description>
        <inlineHelpText>Leader moving the survey (Name Text)</inlineHelpText>
        <label>Leader Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <formula>Survey_Taker_Contact__r.Worksite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <formula>Survey_Taker_Contact__r.Organizer_1__c</formula>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_View_Link__c</fullName>
        <formula>&quot;https://uhw.my.salesforce.com/&quot;  &amp;  Id &amp; &quot;/p?retURL=/&quot; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print View Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <label>Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <label>Question 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_10__c</fullName>
        <label>Question Long Text 10</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_11__c</fullName>
        <label>Question Long Text 11</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Long_Text_12__c</fullName>
        <label>Question Long Text 12</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Status__c</fullName>
        <formula>if (isblank( Survey_Response__c), 
if (Duplicate__c = true, &quot;Duplicate&quot;, 
if ( Unable_to_Resolve__c = true, &quot;Unable to Resolve&quot;, &quot;Not Evaluated&quot;) 
), 
if (isblank(Survey_Response__r.Contact__c), &quot;Non-Member&quot;, &quot;Member&quot;) 
)</formula>
        <label>Questionnaire Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_URL__c</fullName>
        <label>Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <formula>Survey_Taker_Contact__r.Regional_Director__c</formula>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolve_Comments_Extended__c</fullName>
        <label>Resolve Comments Extended</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolve_Comments__c</fullName>
        <label>Resolve Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Link__c</fullName>
        <label>Response Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source_Text__c</fullName>
        <label>Source Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comment__c</fullName>
        <label>Supervisor Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey_Language__c</fullName>
        <label>Survey Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The survey response associated with this Questionnaire record.</description>
        <label>Survey Response</label>
        <referenceTo>Survey_Response__c</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Survey Taker&apos;s Account or Facility (Referenced Account Id)</description>
        <inlineHelpText>Survey Taker&apos;s Account or Facility (Referenced Account Id)</inlineHelpText>
        <label>Survey Taker Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Age__c</fullName>
        <description>Survey Taker&apos;s Age</description>
        <inlineHelpText>Survey Taker&apos;s Age</inlineHelpText>
        <label>Survey Taker Age</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Contact_Id__c</fullName>
        <formula>Survey_Taker_Contact__r.Salesforce_Contact_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Taker Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Survey Taker&apos;s referenced Contact Id.</description>
        <inlineHelpText>This is the Survey Taker&apos;s referenced Contact Id.</inlineHelpText>
        <label>Survey Taker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Questionnaires</relationshipLabel>
        <relationshipName>Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Department__c</fullName>
        <description>Survey Taker&apos;s Department</description>
        <inlineHelpText>Survey Taker&apos;s Department</inlineHelpText>
        <label>Survey Taker Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Division__c</fullName>
        <description>Survey Taker&apos;s Division</description>
        <inlineHelpText>Survey Taker&apos;s Division</inlineHelpText>
        <label>Survey Taker Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Email_Addr__c</fullName>
        <label>Survey Taker Email Addr</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Email__c</fullName>
        <description>Survey Taker&apos;s Email</description>
        <inlineHelpText>Survey Taker&apos;s Email</inlineHelpText>
        <label>Survey Taker Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Ethnicity__c</fullName>
        <description>Survey Taker&apos;s Ethnicity</description>
        <inlineHelpText>Survey Taker&apos;s Ethnicity</inlineHelpText>
        <label>Survey Taker Ethnicity</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Facility_Name__c</fullName>
        <label>Survey Taker Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_First_Name__c</fullName>
        <label>Survey Taker First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Gender__c</fullName>
        <description>Survey Taker&apos;s Gender</description>
        <inlineHelpText>Survey Taker&apos;s Gender</inlineHelpText>
        <label>Survey Taker Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Last_Name__c</fullName>
        <label>Survey Taker Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Manager_Email__c</fullName>
        <label>Survey Taker Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Manager__c</fullName>
        <label>Survey Taker Manager</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Mobile__c</fullName>
        <description>Survey Taker&apos;s Mobile</description>
        <inlineHelpText>Survey Taker&apos;s Mobile</inlineHelpText>
        <label>Survey Taker Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Name__c</fullName>
        <label>Survey Taker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Personal_Email__c</fullName>
        <description>Survey Taker&apos;s Personal Email</description>
        <inlineHelpText>Survey Taker&apos;s Personal Email</inlineHelpText>
        <label>Survey Taker Personal Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Shift__c</fullName>
        <description>Survey Taker&apos;s Shift</description>
        <inlineHelpText>Survey Taker&apos;s Shift</inlineHelpText>
        <label>Survey Taker Shift</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Title__c</fullName>
        <description>Survey Taker&apos;s Title or Job Class</description>
        <inlineHelpText>Survey Taker&apos;s Title or Job Class</inlineHelpText>
        <label>Survey Taker Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_Years_of_Service__c</fullName>
        <description>Survey Taker&apos;s Years of Service</description>
        <inlineHelpText>Survey Taker&apos;s Years of Service</inlineHelpText>
        <label>Survey Taker Years of Service</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unable_to_Resolve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unable to Resolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_of_Service__c</fullName>
        <description>This is current data.</description>
        <formula>Survey_Taker_Contact__r.Years_of_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Service</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>Bargaining_Survey_Enloe_Not_Evaluated</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Enloe_Bargaining_Survey</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>Not Evaluated</value>
        </filters>
        <label>Bargaining Survey Enloe Not Evaluated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Enloe_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Enloe_Bargaining_Survey</value>
        </filters>
        <filters>
            <field>Unable_to_Resolve__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bargaining Survey Enloe Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Enloe_Not_Resolved_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Enloe_Bargaining_Survey</value>
        </filters>
        <label>Bargaining Survey Enloe-All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Public_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Public_Hospital</value>
        </filters>
        <label>Bargaining Survey Public - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Public_Not_Evaluated</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Public_Hospital</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>Not Evaluated</value>
        </filters>
        <label>Bargaining Survey Public Not Evaluated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Public_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Public_Hospital</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>member</value>
        </filters>
        <label>Public Hospital Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Public_Not_Resolved_2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Public_Hospital</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>Not Resolved</value>
        </filters>
        <label>Bargaining Survey Public Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Santa_Rosa_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Santa_Rosa_Community_Bargaining_Survey_2018</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>Not Evaluated</value>
        </filters>
        <label>2018 Barg Surv Santa Rosa -Not Evaluated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Sutter_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Sutter_Bargaining_Survey</value>
        </filters>
        <label>Bargaining Survey Sutter-All</label>
        <language>en_US</language>
        <sharedTo>
            <group>Hospital_Division</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Sutter_All_Not_Evaluated_2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Sutter_Bargaining_Survey</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>equals</operation>
            <value>Not Evaluated</value>
        </filters>
        <label>Bargaining Survey Sutter-Not Evaluated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bargaining_Survey_Sutter_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>Barg_Ldr_Nominee_Name_1__c</columns>
        <columns>Barg_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_1__c</columns>
        <columns>Dept_Ldr_Nominee_Name_1__c</columns>
        <columns>Questionnaire_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Sutter_Bargaining_Survey</value>
        </filters>
        <filters>
            <field>Unable_to_Resolve__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bargaining Survey Sutter Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kaiser_Bargaining_Survey</fullName>
        <columns>NAME</columns>
        <columns>Survey_Taker_Name__c</columns>
        <columns>Survey_Taker_Facility_Name__c</columns>
        <columns>Survey_Taker_Department__c</columns>
        <columns>Leader_Name__c</columns>
        <columns>Leader_Employer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Questionnaire__c.Kaiser_Bargaining_Survey</value>
        </filters>
        <filters>
            <field>Questionnaire_Status__c</field>
            <operation>notEqual</operation>
            <value>Not Evaluated</value>
        </filters>
        <label>Kaiser Bargaining Survey</label>
        <language>en_US</language>
    </listViews>
</CustomObject>